--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -6,6 +6,7 @@
 
 <body>
     <h1>Composer examples</h1>
+    <p><a href="clock.html">Clock example</a></p>
     <p><a href="timer.html">Timer example</a></p>
     <p><a href="dnd.html">Drag-and-drop example</a></p>
 </body>
