Try adding form example, but something seems fucked-up

--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -9,6 +9,7 @@
     <p><a href="clock.html">Clock example</a></p>
     <p><a href="timer.html">Timer example</a></p>
     <p><a href="dnd.html">Drag-and-drop example</a></p>
+    <p><a href="form.html">Form example</a></p>
 </body>
 
 </html>
